<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ClimbingApp</string>
    <string name="btn_climb">Climb</string>
    <string name="btn_fall">Fall</string>
    <string name="btn_reset">Reset</string>
    <string name="current_hold">Current Hold: %d</string>
    <string name="not_started">Not Started</string>
    <string name="blue_zone">Blue Zone</string>
    <string name="green_zone">Green Zone</string>
    <string name="red_zone">Red Zone</string>
    <string name="fallen">Fallen</string>
    <string name="high_score">High Score: %d</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_settings">Settings</string>
    <string name="stats_title">Statistics</string>
    <string name="stats_total_climbs">Total Climbs: %d</string>
    <string name="stats_total_falls">Total Falls: %d</string>
    <string name="stats_success_rate">Success Rate: %d%%</string>
    <string name="hold_info" translatable="false">Hold: %1$d</string>
    <string name="zone_info" translatable="false">Zone: %1$s</string>
    <string name="zone_green" translatable="false">Green</string>
    <string name="zone_yellow" translatable="false">Yellow</string>
    <string name="zone_red" translatable="false">Red</string>
    <string name="menu_language">Language</string>
    <string name="select_language">Select Language</string>
</resources>